fixed wrapping

--- a/app/globals.css
+++ b/app/globals.css
@@ -80,11 +80,12 @@ main {
   margin-top: calc(-1 * (1rem + var(--spacing-sm) + var(--spacing-sm)));
   padding: var(--spacing-default);
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-transform: uppercase;
-  font-size: clamp(1.8em, 20vw, 20em);
+  font-size: clamp(10em, 20vw, 20em);
   line-height: 1.15em;
   letter-spacing: -0.1em;
 }
@@ -103,7 +104,15 @@ main {
 }
 
 .hero-banner h1 {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
   animation: riseIn 1s ease-out forwards;
+  font-kerning: normal;
+  text-align: center;
+  line-height: 0.85em;
 }
 
 .heroFGcontainer {
@@ -113,6 +122,7 @@ main {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  pointer-events: none;
 }
 
 .heroFG {
@@ -158,10 +168,12 @@ main {
   border-radius: 2px;
   object-fit: cover;
   z-index: -1;
+  overflow: hidden;
 }
 
 .imgimg {
   object-fit: cover;
+  transition: transform 0.3s ease-out;
 }
 
 .case-study h2 {
@@ -169,11 +181,15 @@ main {
   font-weight: 600;
 }
 
-/* .case-study h2::after {
-  content: ' →';
-} */
-
 .case-study p {
   opacity: 0.7;
   font-size: 0.8em;
+}
+
+.case-study:hover {
+  cursor: pointer;
+}
+
+.case-study:hover .imgimg {
+  transform: scale(1.025);
 }
